syntax = "proto3";

package protobuf;

option go_package = "/protobuf";
// import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// follow spec of https://cloud.google.com/apis/design/naming_convention
service WebhookService {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
  rpc ListWebhooks(ListWebhooksRequest) returns (ListWebhooksResponse);
  rpc GetWebhook(GetWebhookRequest) returns (GetWebhookResponse);
  rpc SendWebhook(SendWebhookRequest) returns (SendWebhookResponse);
  // rpc RetryWebhook(SendWebhookRequest) returns (SendWebhookResponse);
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

message ListWebhooksRequest {
  // @gotags: validate:"omitempty,required"
  string page_token = 1;
  // @gotags: validate:"omitempty,max=100"
  uint32 page_size = 2;
}

message ListWebhooksResponse {
  repeated Webhook webhooks = 1;
  string next_page_token = 2;
}

message GetWebhookRequest {
  // @gotags: validate:"required"
  string id = 1;
}

message GetWebhookResponse {
  Webhook webhook = 1;
}

message SendWebhookRequest {
  enum HttpMethod {
    GET = 0;
    POST = 1;
  }
  HttpMethod method = 1;
  // @gotags: validate:"required,url,max=1000"
  string url = 2;
  map<string, string> headers = 3;
  // @gotags: validate:"max=2048"
  string body = 4;
  // @gotags: validate:"lte=10"
  uint32 retry = 5;
  enum RetryMechanism {
    BACKOFF = 0;
    LINEAR = 1;
  }
  RetryMechanism retry_mechanism = 6;
  uint32 timeout = 7;
  // @gotags: validate:"lte=3"
  uint32 concurrent = 8;
}

message SendWebhookResponse {
  string query = 1;
}

message Webhook {
  string id = 1;
  string method = 2;
  string body = 3;
  uint32 retries = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

